--- a/PF/estilos/eventos.css
+++ b/PF/estilos/eventos.css
@@ -1,14 +1,13 @@
 main {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: #1c8080;
+    background-image: url("../imagenes/fondoeventos.webp");
+    background-repeat: repeat;
+    background-attachment: fixed;
 }
 
 #contenedor {
     width: 100%;
-    background-image: url("../imagenes/fondoeventos.webp");
-    background-repeat: repeat;
-    background-position: right top;
-    background-attachment: fixed;
     padding: 5%;
     box-sizing: border-box;
 }
@@ -60,4 +59,8 @@ img {
     position: relative;
     width: 200px;
     bottom: 50px;
+}
+
+.nombre h1 {
+    font-family: "Yuji Mai", serif;
 }
