--- a/PF/estilos/reserva.css
+++ b/PF/estilos/reserva.css
@@ -4,14 +4,14 @@ main {
     color: #1c8080;
 }
 
-#contenedor {
+main>div {
     display: flex;
     flex-direction: row;
     align-content: flex-start;
     justify-content: space-evenly;
 }
 
-#contenedor section {
+main>div section {
     margin-top: 50px;
     margin-bottom: 50px;
 }
@@ -36,6 +36,8 @@ textarea[name="comentarios"] {
 .boton {
     background-color: #1c8080;
     color: white;
+    width: 300px;
+    font-size: 20px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     padding: 10px;
     margin-left: 50px;
